# Hackathonix

./: README.md
NotePilot/: README.md  index.html  package-lock.json  package.json
NotePilot/src/: App.css  App.tsx  aiService.ts  audioService.ts  pdfService.ts
NotePilot/src-tauri/: Cargo.toml  tauri.conf.json
NotePilot/src-tauri/capabilities/: default.json
NotePilot/src-tauri/src/: main.rs  system_audio.rs
website/: index.html
