[package]
name = "notepilot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "notepilot_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5"
base64 = "0.22"
wasapi = "0.17"

[dependencies.windows]
version = "0.62.2"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
]
